feat: simplify cli entry, remove debian specific configs into deb package

--- a/workspace/cli/Cargo.toml
+++ b/workspace/cli/Cargo.toml
@@ -18,3 +18,4 @@ log = { workspace = true}
 cargo_metadata = { workspace = true}
 regex = { workspace = true}
 thiserror = { workspace = true}
+tempfile = { workspace =  true }
