--- a/workspace/types/Cargo.toml
+++ b/workspace/types/Cargo.toml
@@ -10,3 +10,7 @@ path = "src/mod.rs"
 [dependencies]
 serde ={ workspace = true}
 thiserror = { workspace = true}
+log = { workspace = true}
+toml = { workspace = true}
+semver = { workspace = true}
+tempfile = {workspace = true}
