--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ whoami = "1.5.1"
 sha1 = "0.11.0-pre.3"
 filetime = "0.2.23"
 httpmock = "0.7.0"
+semver = "1.0.20"  # Replace with the version you need
 
 
 # Local crates
