--- a/workspace/packager_deb/Cargo.toml
+++ b/workspace/packager_deb/Cargo.toml
@@ -24,6 +24,7 @@ sha2 = { workspace = true }
 sha1 = { workspace = true }
 filetime = { workspace = true }
 cargo_metadata = { workspace = true }
+toml = { workspace = true }
 
 
 [dev-dependencies]
