--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,6 +11,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
 
+
 jobs:
   unit_tests:
     runs-on: ubuntu-24.04
@@ -52,6 +53,7 @@ jobs:
           - typescript
           - virtual
           #- python
+      max-parallel: 3
       fail-fast: false
     steps:
       - name: Checkout code
@@ -120,7 +122,7 @@ jobs:
 
   jammy_amd64_packaging:
     runs-on: ubuntu-24.04
-
+  
     strategy:
       matrix:
         language:
@@ -134,6 +136,7 @@ jobs:
           - rust
           - typescript
           - virtual
+      max-parallel: 3
       fail-fast: false
     steps:
       - name: Checkout code
@@ -221,6 +224,7 @@ jobs:
           - typescript
           - virtual
           #- python
+      max-parallel: 3
       fail-fast: false
     steps:
       - name: Checkout code
