--- a/workspace/types/Cargo.toml
+++ b/workspace/types/Cargo.toml
@@ -14,3 +14,4 @@ log = { workspace = true}
 toml = { workspace = true}
 semver = { workspace = true}
 tempfile = {workspace = true}
+url = { workspace = true }
